# TablutBot

./: .gitignore  CMakeLists.txt  makefile  run.sh
src/: main.cpp
src/connection/: Action.cpp  Action.h  Socket.cpp  Socket.h  TablutReader.cpp  TablutReader.h  TablutWriter.cpp  TablutWriter.h
src/state/: Tablut.cpp  Tablut.h
src/utils/: Logger.cpp  Logger.h
